# api-project

./: .coverage  .dockerignore  .env.example  .gitignore  Agents.md  Dockerfile  OLD_README.md  README.md  app.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: aws-deploy-example.yml  ci.yml
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: __init__.py  auth.py  calendars.py
app/db/: session.py
app/models/: __init__.py  oauth_session.py
app/schemas/: __init__.py  calendar.py
app/services/: __init__.py  google_calendar.py  google_oauth.py
app/tests/: conftest.py  test_auth_routes.py  test_calendar_routes.py
src/calendar_prioritizer/: main.py
src/calendar_prioritizer/api/: dependencies.py  router.py
src/calendar_prioritizer/api/routes/: __init__.py  auth.py  calendars.py
src/calendar_prioritizer/core/: config.py
src/calendar_prioritizer/db/: session.py
src/calendar_prioritizer/models/: __init__.py  oauth_session.py
src/calendar_prioritizer/schemas/: __init__.py  auth.py  calendar.py
src/calendar_prioritizer/services/: __init__.py  google_calendar.py  google_oauth.py  priorities.py
src/calendar_prioritizer/static/: app.js  index.html  styles.css
src/calendar_prioritizer/tests/: app.db  conftest.py  pyproject.toml  test_auth_routes.py  test_calendar_routes.py  test_config.py  test_frontend.py  test_google_calendar_service.py  test_google_oauth_service.py  test_priorities_service.py
